--- a/_posts/2020-08-18-the-pact.markdown
+++ b/_posts/2020-08-18-the-pact.markdown
@@ -5,7 +5,7 @@ author: "Karen Kiers"
 date:   2020-08-15 01:06:54 -0500
 excerpt_separator: <!--more-->
 permalink: /:title
-categories: fantasy
+category: post
 ---
 
 “Please reconsider, it’s too dangerous!” John begged.
