--- a/_posts/2020-08-29-re-pete.markdown
+++ b/_posts/2020-08-29-re-pete.markdown
@@ -5,7 +5,7 @@ author: "James Heaton"
 date:   2020-08-29 01:01:01 -0500
 excerpt_separator: <!--more-->
 permalink: /:title
-categories: sureal
+category: post
 ---
 
 Pete woke-up to the pain of a hangover. He never drank anymore, but last night...<!--more-->
