--- a/blog/_posts/2020-08-29-re-pete.markdown
+++ b/blog/_posts/2020-08-29-re-pete.markdown
@@ -4,7 +4,7 @@ title: "Introducing Stinger Stories"
 author: "James Heaton"
 date:   2020-09-04 01:01:01 -0500
 excerpt_separator: <!--more-->
-permalink: /:introducing-stinger-stories
+permalink: /:title
 category:
 ---
 
